@@ -1,5 +1,7 @@
 language: perl
 perl:
+  - "5.12"
+  - "5.14"
   - "5.16"
   - "5.18"
   - "5.20"
