@@ -41,4 +41,4 @@ filenames = dist.ini
 [CPANFile]
 [AutoPrereqs]
 [Prereqs]
-perl = 5.010
+perl = 5.012
